# GreenSlothUtils

./: LICENSE  README.md  comps_glossary.csv  pyproject.toml  rates_glossary.csv
src/GreenSlothUtils/: __init__.py  __main__.py  basicfuncs.py  installerfuncs.py  mxlbrickswriter.py  mxlpy_formatter.py  utils.py
src/GreenSlothUtils/demonstration/: __init__.py  day_simulation.py  fitting.py  inject_fvcb.py  pam_fig.py  photosynthesis_mca.py  utils.py
src/GreenSlothUtils/demonstration/Data/: fluo_col0_1.csv
src/GreenSlothUtils/modelinit/: README_script.py
src/GreenSlothUtils/modelinit/figures/: demonstrations.ipynb  paper_figures.ipynb
src/GreenSlothUtils/modelinit/model/: __init__.py  derived_quantities.py  rates.py
src/GreenSlothUtils/modelinit/model_info/: derived_comps.csv  params.csv
src/GreenSlothUtils/modelinit/model_info/glosses/: update_from_main.py
src/GreenSlothUtils/modelinit/model_info/model_to_glosses/: glosses.py
src/GreenSlothUtils/modelinit/model_info/python_written/gloss_to_python/: _gloss_to_python.py
src/GreenSlothUtils/modelinit/model_info/python_written/model_to_latex/: _model_to_latex.py
test/: README_script.py
test/model/: __init__.py  rates.py
test/model_info/model_to_glosses/: model_derived_params.csv  model_rates.csv
