[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "GreenSlothUtils"
version = "0.0.1"
authors = [{ name = "Elouen Corvest", email = "elouen.corvest@rwth-aachen.de" }]
classifiers = [

]
description = "A package of useful functions for the GreenSloth project"
readme = "README.md"
requires-python = ">=3.12"
maintainers = [
  { name = "Elouen Corvest", email = "elouen.corvest@rwth-aachen.de" },
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = ["mdutils>=1.6.0,<2", "validators", "mxlpy>=0.19.0,<0.20"]

[project.urls]
Homepage = "https://github.com/ElouenCorvest/GreenSlothUtils"
Issues = "https://github.com/ElouenCorvest/GreenSlothUtils/issues"

[project.scripts]
# Entry point from shell
GreenSloth-init = "GreenSlothUtils.__main__:start_cli"

[tool.bandit]
skips = ["B101", "B301", "B403", "B404", "B603", "B607"]

[tool.hatchling]
from = "src"
include = ["GreenSlothUtils"]

[tool.mypy]
disallow_untyped_defs = true
exclude = "tests/*.py"
ignore_missing_imports = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.pyright]
reportMissingModuleSource = "none"

[tool.ruff]
indent-width = 4
line-length = 79

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
ignore = [
  "ANN401",  # any
  "C901",    # too complex
  "COM812",  # missing trailing comma  # "D", # all of documenetation
  "D203",    # blank line before docstring
  "D213",    # multi-line summary first line
  "D401",    # first line should be in imperative mood
  "E501",    # line-too-long
  "ERA001",  # commented-out code
  "FIX001",  # line contains FIXME
  "ISC001",  # single line implicit string concat
  "N806",    # non-lowercase variable
  "PGH003",  # specific rule type ignore
  "S110",    # try-except-pass
  "S301",    # pickle usage
  "TD001",   # invalid todo tag
  "TD002",   # missing todo author
  "TD003",   # missing todo link
  "TD004",   # missing todo version
  "TD005",   # missing todo date
  "TRY003",  # raise vanilla args
  "PLR0912", # too many branches
  "PLR0911", # too many statements
  "PLR0913", # max num of arguments
  "PLR0915", # too many lines
  "PD010",   # pivot table
  "PT011",   # pytest.raises is too broad
  "RUF022",  # unsorted all
]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
  "T201", # print statements
  "D",    # all of documentation
]
"tests/*" = [
  "S101",    # assert
  "D",       # all of documentation
  "PLR2004", # magic comparisons
  "SLF",
]

[tool.tomlsort]
spaces_before_inline_comment = 2
spaces_indent_inline_array = 2
trailing_comma_inline_array = true

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
GreenSlothUtils = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
assimulo = ">=3.7.0,<4"
